# mee6-autotracker

./: .gitignore  Cargo.toml  README.org  cdk.json  package-lock.json  package.json
deployment/lib/: autotracker-stack.ts
src/entries/: adjust-hours.rs  register-hours.rs  slack-prompt.rs
src/services/: dynamodb.rs
src/types/: harvest.rs  mod.rs  slack.rs
